fixed some styles messed up yesterday, took out spinning animation html from order summary portion on mobile and will instead render the order total

--- a/src/Styles/checkout.scss
+++ b/src/Styles/checkout.scss
@@ -311,5 +311,7 @@
   .checkout-wrapper {
     display: flex;
     flex-direction: column;
+    grid-gap: 0px;
+    padding: 0px 40px;
   }
 }
